Check for float[] in similiarity inputs